--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,9 @@
    Author's custom styles
    ========================================================================== */
 
-
+body {
+background-color:black;
+}
 .col-md-6
 {
 
